--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-sanity": "^9.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
     "sanity": "^3.93.0",
