--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
+    "react-medium-image-zoom": "^5.2.14",
     "sanity": "^3.93.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.0"
