--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-medium-image-zoom": "^5.2.14",
     "sanity": "^3.93.0",
     "styled-components": "^6.1.19",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
